working on functionality for checking in a student. the queue now updates with the check in button. working on the functionality with the button on a different page

--- a/src/components/queue-for-instructors/queue-for-instructors.html
+++ b/src/components/queue-for-instructors/queue-for-instructors.html
@@ -16,7 +16,7 @@
       <!--Instead of 1, position in queue-->
       <ion-badge item-end>1</ion-badge>
     </ion-item>
-    <ion-item> -->
+    <ion-item> 
     <button item-start ion-button clear>
         <ion-icon name="remove-circle" color="primary"></ion-icon>
       </button>
