Began global theming. Commented out code from individual pages scss files and began coding in app.scss

--- a/src/pages/courses/courses.scss
+++ b/src/pages/courses/courses.scss
@@ -2,22 +2,22 @@ page-student-courses {
   .navBar{
 
     .backgroundimage {
-      background: url("../../assets/imgs/woodbrown.jpg") no-repeat center center fixed;
-      background-size: cover;
-      position: fixed;
-      top: 0;
-      left: 0;
-
-      min-width: 100%;
-      min-height: 100%;
+      //background: url("../../assets/imgs/woodbrown.jpg") no-repeat center center fixed;
+      //background-size: cover;
+      //position: fixed;
+      //top: 0;
+      //left: 0;
+      //
+      //min-width: 100%;
+      //min-height: 100%;
 
       #title {
         color: white;
       }
 
-      #addbutton {
+      .addbutton {
         color: white;
-        height: 50px;
+
       }
 
     }
