--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,6 +14,47 @@
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
 
-.global__input-error {
+//.global__input-error {
+//  color: red;
+//}
+
+.toolbar{
+  box-shadow: #000000 5px 5px 20px;
+}
+
+.toolbar-background{
+  background: url("../assets/imgs/woodbrown.jpg");
+  background-size: cover;
+}
+
+.toolbar-title{
+  color: white;
+  font-family: Chalkboard, sans-serif;
+}
+
+.content {
+  background: #428957 url("../assets/imgs/chalkboard.png");
+  background-size: cover;
+}
+
+.content * {
+  background: transparent;
+  color: white;
+}
+
+global__input-error{
   color: red;
+}
+
+.bar-button {
+  color: white;
+}
+
+.card{
+  box-shadow: #000000 5px 5px 20px;
+}
+
+.button{
+  background:map-get($colors, primary);
+  box-shadow: #000000 4px 4px 10px;
 }
