--- a/src/components/edit-hours-form/edit-hours-form.html
+++ b/src/components/edit-hours-form/edit-hours-form.html
@@ -1,6 +1,6 @@
 <ion-row center>
   <ion-col text-center>
-    <button item-start ion-button round (click)="addOfficeHourSlot()" [disabled]="newOfficeHoursList.length > 0">
+    <button ion-button round class="addButton" (click)="addOfficeHourSlot()" [disabled]="newOfficeHoursList.length > 0">
       Add Office Hours &nbsp;&nbsp;
       <ion-icon name="add" large></ion-icon>
     </button>
@@ -56,7 +56,7 @@
                 <ion-select [(ngModel)]="newOfficeHoursList[i].dayOfWeek"
                             name="newDayOfWeek{{ i }}"
                             required
-                            placeholder="Sunday"
+                            placeholder="Monday"
                             [disabled]="!instructing.value">
                   <ion-option>Monday</ion-option>
                   <ion-option>Tuesday</ion-option>
@@ -70,7 +70,7 @@
 
               <ion-row>
                 <ion-col>
-                  <button ion-button color="dark" clear
+                  <button ion-button
                           [disabled]="editOfficeHourForm.invalid || !instructing.value"
                           (click)="addNewOfficeHours(officeHour)">Save</button>
                 </ion-col>
@@ -143,7 +143,7 @@
 
               <ion-row>
                 <ion-col>
-                  <button ion-button color="dark" clear
+                  <button ion-button
                           [disabled]="editOfficeHourForm.invalid || !instructing.value || !editOfficeHourForm.dirty"
                           (click)="updateOfficeHours(officeHour)">Save</button>
                 </ion-col>
@@ -211,7 +211,7 @@
 
               <ion-row>
                 <ion-col>
-                  <button ion-button color="dark" clear
+                  <button ion-button
                           [disabled]="editOfficeHourForm.invalid || !instructing.value"
                           (click)="updateOfficeHours(officeHour)">Save</button>
                 </ion-col>
