--- a/src/components/login-form/login-form.html
+++ b/src/components/login-form/login-form.html
@@ -34,7 +34,7 @@
       <ion-row>
         <div>
           <button ion-button (click)="login()" [disabled]="loginForm.invalid">Login</button>
-          <button ion-button color="light" [navPush]="'SignUpPage'">Sign Up</button>
+          <button ion-button style="color: black" color="light" class="signUp" [navPush]="'SignUpPage'">Sign Up</button>
 
         </div>
       </ion-row>
