--- a/src/components/profile-view/profile-view.html
+++ b/src/components/profile-view/profile-view.html
@@ -11,4 +11,8 @@
     </ion-item>
   </ion-card-content>
 </ion-card>
-<button ion-button clear color="danger" (click)="signOut()">Sign out</button>
+<ion-row center>
+  <ion-col text-center>
+    <button ion-button round color="danger" class="signOut" (click)="signOut()">Sign out</button>
+  </ion-col>
+</ion-row>
