--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,9 +14,6 @@
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
 
-//.global__input-error {
-//  color: red;
-//}
 
 .toolbar{
   box-shadow: #000000 5px 5px 20px;
@@ -42,7 +39,7 @@
   color: white;
 }
 
-global__input-error{
+.global__input-error{
   color: red;
 }
 
