Email forms now have @macalester.edu already filled in
Signed-off-by: Juan David Garrido <juandagarrido@hotmail.com>

--- a/src/components/login-form/login-form.html
+++ b/src/components/login-form/login-form.html
@@ -13,7 +13,7 @@
       </ion-item>
 
       <div padding *ngIf="email.invalid && email.dirty">
-        <span class="global__input-error">Email address is not valid. Only macalester email allowed</span>
+        <span class="global__input-error">Email address is not valid. Only macalester emails allowed</span>
       </div>
 
       <ion-item>
