--- a/src/components/profile-view/profile-view.html
+++ b/src/components/profile-view/profile-view.html
@@ -11,7 +11,7 @@
     </ion-item>
   </ion-card-content>
 </ion-card>
-<ion-row center>
+<ion-row>
   <ion-col text-center>
     <button ion-button round color="danger" class="signOut" (click)="signOut()">Sign out</button>
   </ion-col>
