--- a/src/components/login-form/login-form.scss
+++ b/src/components/login-form/login-form.scss
@@ -7,5 +7,96 @@ login-form {
     }
   }
 
+  #logo {
+    position: relative;
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    margin-left: 30px;
+    margin-top: 4px;
+    overflow: hidden;
+    border: 5px solid #f1f1f1;
+    box-shadow: #000000 4px 4px 10px;
+    &::after {
+      position: absolute;
+      content: '';
+      display: block;
+      width: 60%;
+      height: 60%;
+      border-radius: 50%;
+      background: #f1f1f1;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      margin: auto;
+      z-index: 4;
+    }
+    &::before {
+      position: absolute;
+      content: '';
+      display: block;
+      width: 35%;
+      height: 32%;
+      background: #f1f1f1;
+      right: 0;
+      z-index: 10;
+      bottom: 50%;
+      transform: rotateZ(45deg);
+      -webkit-transform: rotateZ(45deg);
+    }
+    .g-line {
+      width: 50%;
+      height: 20%;
+      background: #0091ea;
+      position: absolute;
+      right: 0;
+      margin: auto;
+      border-bottom-right-radius: 4px 20px;
+      top: 0;
+      bottom: 0;
+      z-index: 15;
+    }
+
+    .yellow {
+      width: 40%;
+      height: 40%;
+      position: absolute;
+      left: -15%;
+      bottom: 32%;
+      margin: auto;
+      background: #ffc107;
+      transform: rotateZ(-48deg);
+      -webkit-transform: rotateZ(-48deg);
+      z-index: 3;
+    }
+    .green {
+      position: absolute;
+      width: 100%;
+      height: 50%;
+      bottom: 0;
+      border-radius: 0 0 100% 100%;
+      background: #4caf50;
+      z-index: 2;
+    }
+    .blue {
+      position: absolute;
+      top: 50%;
+      width: 35%;
+      height: 32%;
+      background: #0091ea;
+      right: 0;
+      z-index: 2;
+      transform: rotateZ(45deg);
+      -webkit-transform: rotateZ(45deg);
+    }
+    .red {
+      width: 81%;
+      height: 50%;
+      position: absolute;
+      top: 0px;
+      background: #f44336;
+    }
+  }
 
 }
