--- a/src/components/login-form/login-form.scss
+++ b/src/components/login-form/login-form.scss
@@ -7,6 +7,15 @@ login-form {
     }
   }
 
+  .passwordReset {
+    font-size: 0.8em;
+    min-height: 3rem;
+    height: 30px;
+    background: map-get($colors, danger);
+    margin-top: 0;
+    margin-bottom: 15px;
+  }
+
   #logo {
     position: relative;
     width: 35px;
