Click issue possible fix
Signed-off-by: Juan David Garrido <juandagarrido@hotmail.com>

--- a/src/components/course-list/course-list.html
+++ b/src/components/course-list/course-list.html
@@ -4,6 +4,7 @@
       detail-none
       name="student"
       ion-item
+      class="click-block-hide"
       (click)="toggleSection($event)">
       <ion-icon item-left name="arrow-dropright" *ngIf="!studentButton"></ion-icon>
       <ion-icon item-left name="arrow-dropdown" *ngIf="studentButton"></ion-icon>
@@ -11,7 +12,6 @@
     <ion-list *ngIf="studentButton">
       <div *ngFor="let course of courseList">
         <button
-          class="courselist"
           detail-none
           ion-item
           *ngIf="profile.student.courses.indexOf(course.key) > -1"
@@ -30,6 +30,7 @@
       detail-none
       name="instructor"
       ion-item
+      class="click-block-hide"
       (click)="toggleSection($event)">
       <ion-icon item-left name="arrow-dropright" *ngIf="!instructorButton"></ion-icon>
       <ion-icon item-left name="arrow-dropdown" *ngIf="instructorButton"></ion-icon>
@@ -37,7 +38,6 @@
     <ion-list *ngIf="instructorButton">
       <div *ngFor="let course of courseList">
         <button
-          class="courselist"
           detail-none
           ion-item
           *ngIf="profile.instructor.courses.indexOf(course.key) > -1"
