--- a/src/components/queue-for-students/queue-for-students.html
+++ b/src/components/queue-for-students/queue-for-students.html
@@ -2,6 +2,7 @@
   
   <!--Ion-item for each current student in the queue, but there will be one more item (see last one)-->
   <ion-item>
+  <!-- <ion-item *ngFor="let student of studentQueue"> -->
     <!--Name of student-->
     <h5 item-start>Raza Khalid</h5>
     <!--Instead of 1, position in queue-->
@@ -20,10 +21,10 @@
     <!--Pressing button will lead to queue being updates with current student added in the last position-->
     <!--It will also cause the ion-item under this one to replace this item-->
     <button item-start ion-button clear>
-      <ion-icon name="add-circle" color="primary"></ion-icon>
+      <ion-icon name="add-circle" color="primary" (click)="addStudent(1, course)" ></ion-icon>
     </button>
     <!--The current student-->
-    <h5>Salman Ahmed</h5>
+    <h5>Salman</h5>
     <!--Potential queue position – we need to make sure this keeps updating actively-->
     <ion-badge item-end>4</ion-badge>
   </ion-item>
