--- a/src/components/course-list/course-list.html
+++ b/src/components/course-list/course-list.html
@@ -1,6 +1,7 @@
 <ion-list>
   <ion-list-header class="dropdown" *ngIf="profile.student" no-lines no-padding>
     <button
+      class="dropdown-toggle"
       detail-none
       name="student"
       ion-item
@@ -27,6 +28,7 @@
   </ion-list-header>
   <ion-list-header class="dropdown" *ngIf="profile.instructor" no-lines no-padding>
     <button
+      class="dropdown-toggle"
       detail-none
       name="instructor"
       ion-item
