Added borders and removed shadows from courses and courselist

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -60,7 +60,8 @@
 }
 
 .button{
-  background:map-get($colors, primary);
+  //background:map-get($colors, primary);
+  background: transparent;
   //box-shadow: #000000 4px 4px 10px;
   //box-shadow: none;
 }
@@ -69,4 +70,7 @@
   margin: 0;
 }
 
+.button-effect{
+  background: transparent;
+}
 
