--- a/src/components/course-list/course-list.scss
+++ b/src/components/course-list/course-list.scss
@@ -1,17 +1,11 @@
 course-list {
-  .dropdown {
-    border-bottom: white double 2px;
-    //box-shadow: black 4px 4px 20px;
+  .dropdown-button{
+    border: white solid 2px;
   }
 
-  .dropdown-toggle {
-    border: solid white 2px;
-
-  }
 
   .courselist {
     border-bottom: solid white 2px;
-
   }
 }
 
