Changed look of sign out button in profle view

--- a/src/components/course-list/course-list.scss
+++ b/src/components/course-list/course-list.scss
@@ -1,7 +1,11 @@
 course-list {
 
-  .dropdown-button {
+  .dropdown{
     border: white solid 2px;
+  }
+
+  .dropdown-button {
+    border: white solid 3px;
   }
 
 
