--- a/src/components/profile-view/profile-view.html
+++ b/src/components/profile-view/profile-view.html
@@ -13,6 +13,6 @@
 </ion-card>
 <ion-row>
   <ion-col text-center>
-    <button ion-button round color="danger" class="signOut" (click)="signOut()">Sign out</button>
+    <button ion-button block color="danger" class="signOut" (click)="signOut()">Sign out</button>
   </ion-col>
 </ion-row>
