--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -39,6 +39,19 @@
 .content {
   background: #428957 url("../assets/imgs/chalkboard.png");
   background-size: cover;
+
+  .label{
+    color: white;
+    font-weight: bold;
+    font-family: Chalkboard, sans-serif;
+    font-size: 140%;
+  }
+
+  .input{
+    //border: white solid 1px;
+    //background: transparentize(grey, 0.8);
+    //padding-left: 3%;
+  }
 }
 
 .content * {
@@ -68,6 +81,12 @@
 
 .label {
   margin: 0;
+  color: white;
+
+}
+
+.label-input{
+  color: white;
 }
 
 .button-effect{
