--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -48,9 +48,8 @@
   }
 
   .input{
-    //border: white solid 1px;
-    //background: transparentize(grey, 0.8);
-    //padding-left: 3%;
+    border: white solid 1px;
+    background: transparentize(grey, 0.8);
   }
 }
 
